public/assets/css/style.css
/*
    General styles
*/
.normal{
    background-color:#f2f2f2;
}

.all{
    padding-right: 13%;
    padding-left: 13%;
}

@media (max-width: 992px) {
    .all{
        padding-right: 10%;
        padding-left: 10%;
    }
}


@media (max-width: 768px) {
    .all{
        padding-right: 1%;
        padding-left: 1%;
    }
}

/*
    Navigation styles
*/

md-nav-bar{
    white-space: nowrap;
    overflow-x: auto;
}

md-nav-item{
    display: inline-block;
    float: none;
}

.customFab md-fab-trigger .md-fab:hover, .md-is-open md-fab-trigger .md-fab{
    background-color: #4E342E !important; 
}
.customFab md-fab-actions .md-fab:hover, .md-is-open md-fab-trigger button{
    background-color: #795548 !important; 
}
.customFab .md-fab:hover md-icon{
    color:#fff !important;
}

/* 
    Login Page
*/

.landing{
    background: url('../img/bgl.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.login{
    padding-right: 25%;
    padding-left: 25%;
    padding-top: 15%;
    text-align: center;
}

.login md-card{
    max-width: 600px;
    margin-right: auto;
    margin-left: auto;
}

.login img{
    width: auto;
    height: 125px;
    margin-bottom:0px;
    margin-top:5%;
}

.logInGroup{
    margin-top: 10%;
    margin-bottom: 2%;
}

@media (max-width: 992px) {
    .login{
        padding-top: 20%;
        padding-right: 20%;
        padding-left: 20%;
    }
    .login img{
        height: 100px;
    }
}


@media (max-width: 767px) {
    .login{
        padding-top: 20%;
        padding-right: 1%;
        padding-left: 1%;
    }

    .login .md-display-1{
        font-size: 24px;
    }

    .login img{
        height: 90px;
    }
}

.md-button.md-icon-button{
    margin-left: -6px;
    height: 24px;
}
.md-datepicker-input-container{
    margin-left: -6px;
}

md-datepicker{
    margin-bottom: 16px;
}

md-checkbox ._md-label {
    position: absolute;
    top: 40%;
}

